# fast_azure

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT_IN_PROGRESS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_VIA_PORTAL.md  DOCKER_SETUP.md  Dockerfile  FIXING_GITHUB_OIDC.md  GITHUB_ACTIONS_MONITORING.md  KPI_DASHBOARD_README.md  LOCAL_DEVELOPMENT.md  MAKEFILE_REFERENCE.md  Makefile  QUICK_START.md  README.md  TICKER_README.md  TROUBLESHOOTING.md  WORKLOAD_IDENTITY_SUMMARY.md  docker-compose.yml  pyproject.toml  setup-github-oidc.sh  start-backend
app/: auth.py  config.py  main.py
backend/: .dockerignore  Dockerfile  auth.py  config.py  database.py  main.py  pyproject.toml
backend/clients/: mongo_db.py
backend/models/: __init__.py  board.py  card.py  column.py  item.py  kanban.py  project.py  user.py
backend/routers/: items.py  kanban.py  projects.py  users.py
backend/services/: __init__.py  item_service.py  kanban_service.py  projects_service.py  user_service.py
backend/utils/: __init__.py  indexes.py  seed.py
config/: README.md  azure-config.json
docs/: AZURE_AD_SETUP.md  GITHUB_SECRETS_CONFIGURED.md  GITHUB_SETUP_COMPLETE.md  HTTPS_SETUP.md  INDEX.md  KEYVAULT_SUMMARY.md  KPI_DASHBOARD_README.md  METRICS_MODEL.md  QUICK_DEPLOY.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  start-frontend
infrastructure/: AZURE_DEPLOYMENT.md  GITHUB_OIDC_GUIDE.md  KEY_VAULT_GUIDE.md  Makefile  QUICK_REFERENCE.md  README.md
scripts/: README.md  app_registration_oidc  configure-azure-ad-spa.sh  monitor-deployment.sh  (+5 more)
(+64 files in other folders)
