[project]
name = "fast-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-azure-auth>=5.2.0",
    "fastapi[standard]>=0.117.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "motor>=3.6.0",
    "pymongo[srv]>=4.9.2",
]
