[project]
name = "fast-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-azure-auth>=5.2.0",
    "fastapi[standard]>=0.117.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "motor>=2.5.0,<3.0.0",  # Motor 2.x for PyMongo 3.x compatibility
    "pymongo[srv]>=3.13.0,<4.0.0",  # PyMongo 3.x for Cosmos DB compatibility
]
