[project]
name = "fast-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"  # Motor 2.x requires Python <3.11 (asyncio.coroutine removed in 3.11)
dependencies = [
    "fastapi-azure-auth>=5.2.0",
    "fastapi[standard]>=0.117.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "motor>=2.5.0,<3.0.0",  # Motor 2.x for PyMongo 3.x compatibility
    "pymongo>=3.13.0,<4.0.0",  # PyMongo 3.x for Cosmos DB wire version 6 compatibility
    "dnspython>=2.0.0",  # DNS support for MongoDB connection strings
]
